WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139182
Fix logging typo
https://bugs.webkit.org/show_bug.cgi?id=139182
Summary
Fix logging typo
Eric Carlson
Reported
2014-12-02 08:41:04 PST
MediaPlayerPrivateAVFoundationObjC::platformDuration tries to use %f to log a String.
Attachments
Proposed patch.
(1.64 KB, patch)
2014-12-02 08:45 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2014-12-02 08:45:50 PST
Created
attachment 242412
[details]
Proposed patch.
WebKit Commit Bot
Comment 2
2014-12-02 11:03:46 PST
Comment on
attachment 242412
[details]
Proposed patch. Clearing flags on attachment: 242412 Committed
r176673
: <
http://trac.webkit.org/changeset/176673
>
WebKit Commit Bot
Comment 3
2014-12-02 11:03:50 PST
All reviewed patches have been landed. Closing bug.
Eric Carlson
Comment 4
2014-12-02 12:52:33 PST
Follow-up fix in
https://trac.webkit.org/r176685
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug