Fix logging typo https://bugs.webkit.org/show_bug.cgi?id=139182

Reviewed by Alexey Proskuryakov.

No new tests, only logging code is changed.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::platformDuration): Don't use %f to log a string.


Canonical link: https://commits.webkit.org/157022@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176673 268f45cc-cd09-0410-ab3c-d52691b4dbfc